webroot/common/ui/css/contrail.controller.css
/* ... */
#interfaces-collection tr:first-child td{
    padding-top:17px;}
#interfaces-collection>table>thead{
    background-color:#f9f9f9;}
#interface_type, td#interfaceType, td#user_created_ip, td#prefix{padding-right:16px;}
/*#interfaces-collection tr.collapsibleChildContainer> td{padding-bottom:0px;}*/
#interfaces-collection tr.collapsibleChildContainer .data-row td, #interfaces-collection tr.collapsibleChildContainer .error-row td{height:0px;}
#interfaces th.text-center{
    text-align:center!important}
#PolicyRules .custom-combobox>span.input-group-addon{
    background:transparent;
    border:transparent solid 1px;
    position:absolute;
    top:3px;
}
#PolicyRules .custom-combobox-input:focus{
    outline:none;
}
#PolicyRules .custom-combobox-input+span i.fa-caret-down{
    display:none;
}
#PolicyRules .custom-combobox-input:focus +span i.fa-caret-down{
    display:block;
}
/*
Added for severity bubble in config alarms
*/
.circle.mini {
    border: 1px;
}
#PolicyRules>table>tbody>tr>td>div>div.select2-container, #PolicyRules>table>tbody>tr>td .select2-container-disabled a{
    border:0px;
}
#PolicyRules>table>tbody>tr>td.data-cell-mirror>div>div.select2-container, #PolicyRules>table>tbody>tr>td.data-cell-QoS>div>div.select2-container{
    border:1px solid #dadada;
}
#PolicyRules>table>tbody>tr>td .select2-container-disabled{
    border: 1px solid #f4f4f4;
}
#PolicyRules .custom-combobox-input+span i.icon-caret-down{
    display:block;vertical-align:top;
}
#PolicyRules .custom-combobox .ui-autocomplete-input {
    margin: 0;
    padding: 0 19px 0 5px;
}
#PolicyRules td.data-cell-service_instances .form-element.span10, #PolicyRules td.data-cell-mirror .select2-container.span10, #PolicyRules td.data-cell-QoS .select2-container.span10{margin-left:3px;}
#PolicyRules th>a.editable-grid-add-link{
    margin-left:5px;}

#graceful_restart_section input.ace-input[type=checkbox] + .ace-lbl::before {
    margin-right: 10px;
}
table td[class*="col-xs-"], table th[class*="col-xs-"], .row-fluid table td[class*="col-xs-"], .row-fluid table th[class*="col-xs-"] {
    display: table-cell;
    float: none;
    margin-left: 0;
    padding-left:0px;
}
#config-policies-grid-id  table.sharedlist_permission, #port-grid-id table.sharedlist_permission, #config-svc-template-grid table.sharedlist_permission, #bgp-as-a-service-grid table.sharedlist_permission, #dns-server-grid table.sharedlist_permission, #config-alarm-grid table.sharedlist_permission{
    width:65%!important;
}

#configure-routingPolicy .and-clause-collection td.data-cell.data-cell-value, #configure-routingPolicy #or-clause-collection td.data-cell.data-cell-variables, #configalarm_edit_alarm_rule #or-clause-collection td.data-cell.data-cell-variables{
    padding-top: 12px;
}
#configure-routingPolicy #or-clause-collection .data-cell.data-cell-operation>div{
    margin-top:-2px;
}
#servicePorts .contrail-editable-grid-table, #analyzer_rule_section .contrail-editable-grid-table{
    margin-left:15px;
    margin-right:15px;}
#share_list th:first-child, .contrail-editable-grid-table th:first-child {
    padding-left: 5px;
}
#security_group_edit_security_group .contrail-editable-grid-table{
    margin-top:5px;}
#interface #infServer{
    padding-left:15px;}
#analyzer_rule_section>label{
    padding-left:15px;
    padding-bottom:5px;
    font-size:13px;}
#configalarm_edit_alarm_rule #description .textarea-input-group{
    width:100%;}
#configalarm_edit_alarm_rule .collection-table .data-cell>div.row{margin:0px;}

.vn_key{
    font-weight:600;
}
.vn_seperator{
    padding-right:8px;}
.data-cell-mirroringOptions .form-label{
    text-align:left;
    padding-left:6px;}
.data-cell-QoS .form-label{
    text-align:left;
    padding-left:21px;}
.data-cell-mirroringOptions .form-element{
    padding-left:10px;}
 .data-cell-QoS .form-element{
     padding-left:8px;}
.data-cell-mirroringOptions .form-element .help-block{
    text-align:left;}
.data-cell-mirroringOptions{
    padding-bottom:0px;}
#bgp-grid .detail-block-list-content span.sec_label~hr{
    margin-top: 5px;
    margin-bottom: 5px;
    border: none;
    }

